completed SortedOrder