@@ -1,19 +1,27 @@
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 
 public class Task {
-    public static void main(String[] args) {
-        ArrayList<Integer> list = new ArrayList<>(List.of(1, 5, 5, 8, 6));
-        System.out.println(isSorted(list));
 
-        list = new ArrayList<>(List.of(0, 0, 3, 5, 8));
-        System.out.println(isSorted(list));
+    public static void main(String[] args) {
+
+        ArrayList<Integer> list1 = new ArrayList<>(Arrays.asList(1, 5, 5, 8, 6));
+        ArrayList<Integer> list2 = new ArrayList<>(Arrays.asList(0, 0, 3, 5, 8));
+        ArrayList<Integer> list3 = new ArrayList<>(Arrays.asList(1, 2, 5, 4));
+
+        System.out.println(isSorted(list1));
+        System.out.println(isSorted(list2));
+        System.out.println(isSorted(list3));
     }
 
     public static boolean isSorted(ArrayList<Integer> nums) {
 
-        //Write your solution here
-    }
+        for (int i = 0; i < nums.size() - 1; i++) {
+            if (nums.get(i) > nums.get(i + 1)) {
+                return false;
+            }
+        }
 
+        return true;
+    }
 }
